<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_large_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_large_poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/iv_favoritesLogoUnchecked"
        android:layout_width="@dimen/fav_logo_size"
        android:layout_height="@dimen/fav_logo_size"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_large_poster"
        app:layout_constraintEnd_toEndOf="@+id/iv_large_poster"
        app:layout_constraintBottom_toBottomOf="@+id/iv_large_poster"
        android:src="@drawable/starnotfilledtwo"
        android:contentDescription="@string/favorites_logo_unchecked"
        android:onClick="onClickChangeFavorites"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_favoritesLogoUnchecked"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_favoritesLogoUnchecked"
        app:layout_constraintStart_toEndOf="@id/gl_center"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_originalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_original_title"/>

    <TextView
        android:id="@+id/tv_originalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/gl_center"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_originalTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_rating"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_originalTitle"
        app:layout_constraintStart_toEndOf="@id/gl_center"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_label_releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rating"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_releaseDate"/>

    <TextView
        android:id="@+id/tv_releaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rating"
        app:layout_constraintStart_toEndOf="@+id/gl_center"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_releaseDate"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/movie_overview" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_overview"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>